# particleMethodsBernoulli

./: .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE
R/: classes.R  importanceResampling.R  importanceResamplingAuxiliary.R  importanceResamplingWithoutReplacement.R  importanceResamplingWithoutReplacementAuxiliary.R  importanceResamplingWithoutReplacementS2.R  importanceSampling.R  onLoad.R
Simulations/equalProbability/: equalProbability  equalProbability.R  generateScenarios.R  submitJobs.R  summarise.R
Simulations/unequalProbability/: generateScenarios.R  submitJobs.R  summarise.R  unequalProbability  unequalProbability.R
copyText/: CMakeLists.txt
src/: CMakeLists.txt
src/particleMethodsBernoulli/: CMakeLists.txt  importanceResampling.cpp  importanceResampling.h  importanceResamplingAuxiliary.cpp  importanceResamplingAuxiliary.h  importanceResamplingWithoutReplacement.cpp  importanceResamplingWithoutReplacement.h  importanceResamplingWithoutReplacementAuxiliary.cpp  importanceResamplingWithoutReplacementAuxiliary.h  importanceResamplingWithoutReplacementS2.cpp  importanceResamplingWithoutReplacementS2.h  importanceSampling.cpp  importanceSampling.h  includeMPFR.h  pareto.cpp  pareto.h  register.cpp  sampfordFromParetoNaive.cpp  sampfordFromParetoNaive.h
