cmake_minimum_required(VERSION 3.1)
set(CppFiles importanceSampling.cpp register.cpp)
set(HeaderFiles importanceSampling.h includeMPFR.h)
add_library(particleMethodsBernoulliRPackage SHARED ${CppFiles} ${HeaderFiles})
target_link_libraries(particleMethodsBernoulliRPackage PUBLIC ${Boost_LIBRARIES} Rcpp mpfr)
target_include_directories(particleMethodsBernoulliRPackage PUBLIC ${Boost_INCLUDE_DIRS})
set_target_properties(particleMethodsBernoulliRPackage PROPERTIES OUTPUT_NAME "particleMethodsBernoulli")
target_compile_definitions(particleMethodsBernoulliRPackage PRIVATE CUSTOM_STATIC_RCPP)

if(WIN32)
	target_compile_definitions(particleMethodsBernoulliRPackage PUBLIC _CRT_SECURE_NO_WARNINGS)
	target_link_libraries(particleMethodsBernoulliRPackage PRIVATE "${CMAKE_BINARY_DIR}/R.lib")
	foreach(BUILD_TYPE IN LISTS CMAKE_CONFIGURATION_TYPES)
		string(TOUPPER "${BUILD_TYPE}" UPPER_BUILD_TYPE)
		if(CMAKE_SIZEOF_VOID_P EQUAL 8)
			set_target_properties(particleMethodsBernoulliRPackage PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/${BUILD_TYPE}/inst/libs/x64 PDB_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/${BUILD_TYPE}/inst/libs/x64)
		else()
			set_target_properties(particleMethodsBernoulliRPackage PROPERTIES RUNTIME_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/${BUILD_TYPE}/inst/libs/i386 PDB_OUTPUT_DIRECTORY_${UPPER_BUILD_TYPE} ${CMAKE_BINARY_DIR}/${BUILD_TYPE}/inst/libs/i386)
		endif()
	endforeach()
else()
	set_target_properties(particleMethodsBernoulliRPackage PROPERTIES LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/src)
	set_target_properties(particleMethodsBernoulliRPackage PROPERTIES PREFIX "")
endif()
